# Sherpa

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
paper_coach/: __init__.py  __main__.py  cli.py
paper_coach/db/: knowledge_base.py
paper_coach/engines/: __init__.py
sherpa/: __init__.py  __main__.py  cli.py  config.py  llm.py
sherpa/db/: __init__.py  knowledge_base.py  seed.py  sessions.py
sherpa/engines/: __init__.py  agentic.py  rule_based.py  smart_search.py
sherpa/integrations/: __init__.py  arxiv.py  claude_code.py
sherpa/pdf/: __init__.py  extractor.py  parser.py
sherpa/repl/: __init__.py  commands.py  session.py
sherpa/tutoring/: __init__.py  engine.py  file_watcher.py  modes.py  prompts.py  skeleton.py  state.py  tutorial_runner.py
tests/: __init__.py  run_all.py  test_arxiv.py  test_coach.py  test_tutoring.py
