[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sherpa"
version = "0.1.0"
description = "An AI-powered CLI tool that helps ML researchers implement academic papers"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Nikhil Kuniyil"}
]
keywords = ["ml", "machine-learning", "papers", "research", "ai", "llm", "implementation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "arxiv>=2.0.0",
    "anthropic>=0.18.0",
    "PyMuPDF>=1.23.0",
    "httpx>=0.25.0",
    "prompt-toolkit>=3.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
sherpa = "sherpa.cli:main"

[project.urls]
Homepage = "https://github.com/nikhilkuniyil/Sherpa"
Repository = "https://github.com/nikhilkuniyil/Sherpa"

[tool.setuptools.packages.find]
where = ["."]
include = ["sherpa*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"
